fix: mobile menu, z-index of page__title

--- a/src/scss/modules/header.scss
+++ b/src/scss/modules/header.scss
@@ -446,7 +446,6 @@
         padding-top: 1.25rem;
         padding-bottom: 0;
         &__top {
-            display: none;
             border-top: 1px solid rgba($color: $black, $alpha: 0.3);
             flex-direction: column;
             gap: 0;
