--- a/src/scss/pages/single-service-page.scss
+++ b/src/scss/pages/single-service-page.scss
@@ -1,6 +1,6 @@
 .page {
     &__title {
-        z-index: 10;
+        z-index: 1;
     }
 
     position: relative;
